@@ -1,4 +1,5 @@
 Development
+	Fix crash when dbus_send_event is called but connection is not initialized
 	Updated .desktop file from Ubuntu
 	Copyright changes from Ubuntu
 	zn_CH (Chinese Simplified) translation by Lobster DB
